# bushfire-beacon

./: .bumbversion.cfg  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  utils.py
app/api/: __init__.py  deps.py
app/api/v1/: filepond.py  items.py  login.py  users.py
app/schemas/: __init__.py  byat.py  item.py  token.py  user.py
web/: package-lock.json  package.json  postcss.config.js  rollup.config.js
web/public/: common.css  global.css  index.html
web/src/: App.svelte  Charts.svelte  Home.svelte  Route1.svelte  Upload.svelte  VegaCharts.svelte  main.js
