[tool.poetry]
name = "bushfire-beacon"
version = "0.1.0"
description = "simple bushfire beacon"
authors = ["Dax Reyes <dax.reyes@woohoow.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.65.2"}
python-jose = "^3.3.0"
SQLAlchemy = "^1.4.18"
alembic = "^1.6.5"
loguru = "^0.5.3"
pydash = "^5.0.0"
SQLAlchemy-Utils = "^0.37.7"
passlib = "^1.7.4"
emails = "^0.6"
phonenumbers = "^8.12.25"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = {version = "^21.6b0", allow-prereleases = true}
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
bandit = "^1.7.1"
isort = "^5.10.1"
bumpversion = "^0.6.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
